[package]
name = "fnum"
version = "0.0.1"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
edition = "2018"
keywords = ["enum"]
repository = "https://github.com/carrotflakes/fnum"
license = "MIT"
readme = "README.md"
categories = ["memory-management"]

[dependencies]
fnum-derive = "0.0"
once_cell = "1.5"
